--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -33,6 +33,8 @@
     /* background-color: pink; */
     width: 180px;
     height: auto;
+    margin-left: 30px;
+    cursor: pointer;
 }
 .logo img{
     width: 100%;
@@ -44,23 +46,56 @@
 .nav-main-box{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    background-color: rgb(110, 152, 211);
+    justify-content: flex-end;
+    width: 50%;
+    height: 100%;
+    /* background-color: rgb(110, 152, 211); */
+    padding: 0 20px;
 }
 
 .nav-links-cont{
+    margin-right: 30px;
+    /* background-color: lightgoldenrodyellow; */
+    /* width: 60%; */
+    height: 30px;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    white-space: nowrap;
 
 }
 .nav-links-cont ul{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    list-style: none;
+    list-style: none;   
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+}
+.nav-links-cont ul li a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+.nav-links-cont ul li{
+    padding: 0px 30px;
 }
 
-
-
+.nav-btn{
+    padding: 0px 20px;
+    border-radius: 30px;
+    height: 35px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: black;
+    white-space: nowrap;
+}
 
 
 
