--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -15,12 +15,13 @@
 
 
 .nav{
-    position: relative;
+    z-index: 100;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 80px;
-    background-color: #333;
+    /* background-color: #333; */
     color: white;
     display: flex;
     align-items: center;
@@ -102,8 +103,22 @@ cursor: pointer;
 
 
 
+/* FIRST SECTION */
+/* FIRST SECTION */
+/* FIRST SECTION */
+/* FIRST SECTION */
+/* FIRST SECTION */
+/* FIRST SECTION */
 
 
+.f-section{
+    background-color: #735d5d;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    top: 0;
+    margin-bottom: 200px;
+}
 
 
 
