--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -86,12 +86,15 @@
 .nav-btn{
     padding: 0px 20px;
     border-radius: 30px;
+    border: 1px solid rgb(0, 0, 0);
     height: 35px;
     background-color: white;
+    outline: none;
+
     display: flex;
     align-items: center;
     justify-content: center;
-cursor: pointer;
+    cursor: pointer;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     color: black;
@@ -112,18 +115,63 @@ cursor: pointer;
 
 
 .f-section{
-    background-color: #735d5d;
+    /* background-color: #735d5d; */
     width: 100%;
     height: 100vh;
     position: relative;
     top: 0;
     margin-bottom: 200px;
+
+
+}
+.img-container{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.img-container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(-180deg, rgba(0, 0, 0, 0.9)20% , rgba(255, 255, 255, 0));
 }
 
 
 
 
 
-
-
-
+@font-face {
+    font-family: 'Chard';
+    src: url('../font/chard/Chard.ttf') format('truetype');
+}
+.text-container{
+    position: absolute;
+    top: 50%;
+    left: 270px;
+    text-align: center;
+    color: white;
+}
+.text-container::before{
+    content: '';
+    position: absolute;
+    top: -100%;
+    left: 30%;
+    width: 400px;
+    height: 300px;
+    background: url('../img/banner1-2.png') no-repeat;
+}
+.text-container h1{
+    font-family: 'Chard', sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 70px;
+}
