--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -175,3 +175,125 @@
     color: rgb(255, 255, 255);
     font-size: 70px;
 }
+
+
+
+
+.booking-bar{
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: 130px;
+    background-color: rgb(255, 255, 255);
+    /* border-radius: 30px; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0px 1px 50px  rgba(0, 0, 0, 0.5);
+}
+
+.booking-bar-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.booking-divider{
+    width: 1px;
+    height: 60%;
+    background-color: rgb(232, 232, 232);
+}
+
+
+
+.booking-bar-item{
+
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 30px;
+}
+.booking-bar-item label{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Margesh', sans-serif;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.booking-bar-item input, .booking-bar-item select{
+    width: 80%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding: 0 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px; 
+    background-color: rgb(240, 240, 240);    
+    color: rgb(0, 0, 0);   
+}
+
+.booking-bar-item #guests{
+    width: 20%;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    /* padding-left: 15px; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;        
+}
+
+.booking-btn{
+    width: 20%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
+    padding: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Margesh', sans-serif; */
+    font-size: 18px;
+}
+
+
+
+
+.flatpickr-calendar {
+    background: #333; /* Custom background */
+    color: rgb(0, 0, 0); /* Text color */
+}
+.flatpickr-day.selected {
+    background: #007bff; /* Selected day color */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
