--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -234,10 +234,13 @@
     padding: 0 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px; 
-    background-color: rgb(240, 240, 240);    
+    background-color: rgb(245, 245, 245);    
     color: rgb(0, 0, 0);   
+    text-align: center;
 }
-
+.booking-bar-item input::placeholder{
+    color:rgb(174, 125, 84);
+}
 .booking-bar-item #guests{
     width: 20%;
     height: 40px;
@@ -252,6 +255,7 @@
 .booking-btn{
     width: 20%;
     height: 100%;
+    position: relative;
     background-color: rgb(0, 0, 0);
     color: white;
     border: none;
@@ -266,6 +270,29 @@
     /* font-family: 'Margesh', sans-serif; */
     font-size: 18px;
 }
+.booking-btn span {
+    position: relative;
+    z-index: 2;
+}
+
+.booking-btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(174, 125, 84);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;}
+
+.booking-btn:hover::before {
+    transform: scaleX(1);
+}
+
+
+
 
 
 
@@ -283,15 +310,85 @@
 
 
 
+/* SECOND SECTION */
+/* SECOND SECTION */
+/* SECOND SECTION */
+/* SECOND SECTION */
+/* SECOND SECTION */
+
+
+.s-section{
+    width: 100%;
+    /* height: 100vh; */
+    position: relative;
+    background-color: lightblue;
+    top: 0;
+    margin-bottom: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.s-section-container{
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+.s-section-heading{
+    background-color: pink;
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+
+}
+
+
+
+.s-section-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    position: relative;
+}
+.s-section-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 38%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.s-section-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 59%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
 
 
 
 
-
-
-
-
-
+.s-section-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
 
 
 
