--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
 }
 
-
+@font-face {
+    font-family: 'sageffine';
+    src: url('../font/lucy-said-ok-personal-use/Lucy\ Said\ Ok\ Personal\ Use.ttf') format('truetype');
+}
 /* NAVBAR */
 /* NAVBAR */
 /* NAVBAR */
@@ -237,6 +240,7 @@
     background-color: rgb(245, 245, 245);    
     color: rgb(0, 0, 0);   
     text-align: center;
+    background: url("../img/icon/down arrow.png") no-repeat right ;
 }
 .booking-bar-item input::placeholder{
     color:rgb(174, 125, 84);
@@ -321,7 +325,7 @@
     width: 100%;
     /* height: 100vh; */
     position: relative;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     top: 0;
     margin-bottom: 200px;
     display: flex;
@@ -341,7 +345,7 @@
     position: relative;
 }
 .s-section-heading{
-    background-color: pink;
+    /* background-color: pink; */
     width: 100%;
     /* height: 100px; */
     text-align: center;
@@ -389,6 +393,108 @@
     color: rgb(0, 0, 0);
     margin-bottom: 20px;
 }
+
+
+
+
+.cards-cont{
+    /* background-color: lightcoral; */
+    width: 80%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 50px 0;
+
+}
+
+
+.card{
+    /* background-color: #7878f0; */
+    width: 30%;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+}
+.card-img{
+    width: 100%;
+    height: 100%;
+}
+.card-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+    object-fit: cover;
+}
+.card:hover .card-img img{
+    transform: scale(1.2);
+}
+.card-text{
+    position: absolute;
+    top: 60%;
+    left: 0;
+    background-color: rgba(250, 250, 250, 0.608);
+    width: 70%;
+    height: 20%;
+    padding: 0 20px;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    z-index: 2;
+}
+
+.card-text h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'sageffine', sans-serif;
+    font-size: 25px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: rgb(0, 0, 0);
+    transition: .3s linear;
+    z-index: 10;
+
+}
+.card-text::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgb(174, 125, 84);
+    width: 100%;
+    height: 100%;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: transform 0.4s ease;
+    z-index: 1;
+}
+.card:hover .card-text::before, .card:hover .card-text h1{
+    transform: scaleY(1);
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
