--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -325,7 +325,7 @@
     width: 100%;
     /* height: 100vh; */
     position: relative;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     top: 0;
     margin-bottom: 200px;
     display: flex;
@@ -346,7 +346,7 @@
     position: relative;
 }
 .s-section-heading{
-    background-color: pink;
+    /* background-color: pink; */
     width: 100%;
     /* height: 100px; */
     text-align: center;
@@ -417,7 +417,7 @@
 /* CARD */
 
 .cards-cont{
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
     width: 80%;
     height: 100%;
     display: flex;
@@ -506,7 +506,7 @@
 
 
 .about-section{
-    background-color: #f0f0f0;
+    /* background-color: #f0f0f0; */
     padding: 100px 0;
     width: 80%;
 }
@@ -524,7 +524,7 @@
 
 
 .about-content{
-    background-color: pink;
+    /* background-color: pink; */
     width: 60%;
     /* height: 100px; */
     position: relative;
@@ -591,15 +591,16 @@
 
 
 .about-info{
-    background-color: lightgreen;
-    height: 120px;
+    /* background-color: lightgreen; */
+    height: 100px;
     width: 80%;
+    margin-top: 50px;
     margin-left: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: row;
-    gap: 5px;
+    gap: 20px;
 }
 
 
@@ -607,32 +608,101 @@
     width: 50%;
     height: 100%;
     /* padding: 20px; */
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
-    gap: 30px;
+    gap: 10px;
 }
 
 
-.info-icon{
+/* .info-icon{
     background-color: #007bff;
 
-}
+} */
 .info-icon svg{
-    width: 130px;
-    height: 100px;
-    fill: rgb(0, 0, 0);
-    stroke-width: 1;
+    width: 100px;
+    height: 80px;
+    fill: rgb(174, 125, 84);
 }
-.info-icon svg path{
-    stroke-width: 10;
-}
+
 .info-text{
-    background-color: aqua;
+    /* background-color: aqua; */
+    width: 150px;
 }
+.info-text h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 35px;
+    letter-spacing: 1px;
+    color: rgb(35, 35, 35);
+}
+
+
+
+
+.info-list{
+    /* background-color: rgb(233, 57, 86); */
+    width: 80%;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+.info-list ul{
+    list-style: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(49, 49, 49);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.info-list ul li i{
+    color: rgb(174, 125, 84);
+    font-size: 16px;
+    margin-right: 5px;
+}
+
+
+
+
+.info-btn{
+    width: 170px;
+    height: 50px;
+    margin-top: 50px;
+    margin-left: 20px;
+    background-color: rgb(174, 125, 84);
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.info-btn span {
+    position: relative;
+    z-index: 2;
+}
+.info-btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;
+}
+.info-btn:hover::before {
+    transform: scaleX(1);
+}
+
+
 
 
 
@@ -642,11 +712,46 @@
 
 .about-img{
     width: 40%;
-    background-color: rgb(182, 173, 230);
+    height: 600px;
+    position: relative;
+    /* background-color: rgb(182, 173, 230); */
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: column;
+}
+.about-img::before{
+    content: '';
+    position: absolute;
+    top: 80px;
+    left: 20px;
+    width: 370px;
+    height: 350px;
+    z-index: 1;
+    border: 1px solid rgb(174, 125, 84);
+    /* background: #000; */
+}
+.img1,.img2{
+    width: 380px;
+    height: 300px;
+    position: absolute;
+    border: 8px solid rgb(236, 236, 236);
+}
+.img1{
+    /* position: absolute; */
+    z-index: 2;
+    right: 0px;
+    top: 0px;
+}
+.img2{
+    z-index: 3;
+    position: relative;
+    left: -70px;;
+    top: 70px;
 }
 .about-img img{
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
