--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -123,7 +123,7 @@
     height: 100vh;
     position: relative;
     top: 0;
-    margin-bottom: 200px;
+    margin-bottom: 120px;
 
 
 }
@@ -160,7 +160,11 @@
 .text-container{
     position: absolute;
     top: 50%;
-    left: 270px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* left: 270px; */
     text-align: center;
     color: white;
 }
@@ -168,7 +172,7 @@
     content: '';
     position: absolute;
     top: -100%;
-    left: 30%;
+    /* left: 30%; */
     width: 400px;
     height: 300px;
     background: url('../img/banner1-2.png') no-repeat;
@@ -194,7 +198,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0px 1px 50px  rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 50px 0px rgba(0, 0, 0, 0.2);
 }
 
 .booking-bar-container{
@@ -327,12 +331,19 @@
     position: relative;
     /* background-color: lightblue; */
     top: 0;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+.design-img1{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+
 
 .s-section-container{
     width: 100%;
@@ -400,7 +411,7 @@
     height: 130px;
     position: absolute;
     top: 20%;
-    left: 57%;
+    right: 400px;
     transform: rotate(-10deg);
     /* background-color: #007bff; */
 }
@@ -600,7 +611,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    gap: 20px;
+    gap: 30px;
 }
 
 
@@ -613,6 +624,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* border-top: 1px solid rgb(174, 125, 84); */
+    border-bottom: 1px solid rgb(174, 125, 84);
 
     gap: 10px;
 }
@@ -739,6 +752,7 @@
 }
 .img1{
     /* position: absolute; */
+    height: 350px;
     z-index: 2;
     right: 0px;
     top: 0px;
@@ -747,12 +761,251 @@
     z-index: 3;
     position: relative;
     left: -70px;;
-    top: 70px;
+    top: 100px;
 }
 .about-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
+
+
+
+
+/* THIRD SECTION */
+/* THIRD SECTION */
+/* THIRD SECTION */
+/* THIRD SECTION */
+/* THIRD SECTION */
+
+
+.thr-section{
+    width: 100%;
+    /* height: 100%; */
+    position: relative;
+    background-color: rgb(246, 243, 238);
+    top: 0;
+    margin-bottom: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.design-img2{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+
+.service{
+    width: 100%;
+    /* height: 100%; */
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    position: relative;
+    /* background-color: rgb(149, 49, 66); */
+
+}
+.service-heading{
+    /* background-color: pink; */
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+    position: relative;
+    padding: 20px 0;
+}
+
+
+
+.service-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    position: relative;
+}
+.service-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 36%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.service-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 61%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+
+.service-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
+
+
+/* SERVICE CARDS */
+/* SERVICE CARDS */
+/* SERVICE CARDS */
+/* SERVICE CARDS */
+/* SERVICE CARDS */
+
+
+.services-card-cont{
+    /* background-color: lightcoral; */
+    width: 80%;
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* flex-wrap: wrap; */
+    /* gap: 10px; */
+    margin: 50px 0;
+
+}
+
+
+.service-card{
+    background-color: white;
+    width: 390px;
+    height: 500px;
+    position: relative;
+    /* gap: 10px; */
+
+}
+
+.ser-card-img{
+    width: 100%;
+    height: 50%;
+    cursor: pointer;
+    overflow: hidden;
+}
+.ser-card-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+    object-fit: cover;
+}
+.service-card:hover .ser-card-img img{
+    transform: scale(1.1);
+}
+
+
+
+
+
+.ser-card-text{
+    /* background-color: rgb(55, 6, 53); */
+    width: 100%;
+    /* height: 20%; */
+    margin-top: 20px;
+    padding: 10px 20px;
+    /* white-space: nowrap; */
+    display: flex;
+    align-items: self-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    /* z-index: 2; */
+}
+.ser-card-text h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 32px;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+.ser-card-text p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: rgb(174, 125, 84);
+    margin-top: 10px;
+}
+
+.ser-divider{
+    width: 90%;
+    height: 0.5px;
+    background-color: rgb(174, 125, 84);
+    margin: 30px auto;
+}
+
+
+.ser-items{
+    width: 100%;
+    /* height: 100px; */
+    column-count: 2;
+    column-gap: 10px;
+}
+.ser-item{
+    /* background-color: rgb(84, 174, 123); */
+    margin-bottom: 10px;
+    display: flex;
+    padding: 10px 0;
+
+}
+
+.ser-item i{
+    font-size: 20px;
+    color: rgb(120, 120, 120);
+    margin: 0 10px;
+}
+.ser-item p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin: 0 10px;
+    color: rgb(120, 120, 120);
+    white-space: nowrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
