--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    /* outline: 2px solid red; */
 }
 
 @font-face {
@@ -802,14 +804,14 @@
 .service{
     width: 100%;
     /* height: 100%; */
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
     display: flex;
     align-items: center;
     /* justify-content: center; */
     flex-direction: column;
     position: relative;
-    /* background-color: rgb(149, 49, 66); */
+    background-color: rgb(149, 49, 66);
 
 }
 .service-heading{
@@ -820,7 +822,6 @@
     position: relative;
     padding: 20px 0;
 }
-
 
 
 .service-heading h1{
@@ -861,6 +862,8 @@
 }
 
 
+
+
 /* SERVICE CARDS */
 /* SERVICE CARDS */
 /* SERVICE CARDS */
@@ -869,14 +872,14 @@
 
 
 .services-card-cont{
-    /* background-color: lightcoral; */
-    width: 80%;
+    background-color: lightcoral;
+    /* width: 80%; */
     /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
-    /* gap: 10px; */
+    flex-wrap: wrap;
+    gap: 20px;
     margin: 50px 0;
 
 }
@@ -885,7 +888,7 @@
 .service-card{
     background-color: white;
     width: 390px;
-    height: 500px;
+    height: 570px;
     position: relative;
     /* gap: 10px; */
 
@@ -977,26 +980,184 @@
 
 
 
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+
+
+.testimonial{
+    width: 100%;
+    /* height: 100%; */
+    margin-top: 100px;
+    margin-bottom: 150px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    position: relative;
+    background-color: rgb(149, 49, 66);
+
+}
+
+.testimonial-heading{
+    background-color: pink;
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+    position: relative;
+    padding: 20px 0;
+}
+
+.testimonial-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    position: relative;
+}
+.testimonial-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 36%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.testimonial-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 61%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+.testimonial-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
+
+
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+/* TESTIMONIAL */
+
+
+
+.testimonial-card-cont{
+    background-color: lightcoral;
+    width: 90%;
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 50px 0;
+
+}
+
+
+.testimonial-card{
+    background-color: white;
+    width: 30%;
+    /* height: 200px; */
+    /* padding: 10px 20px; */
+    position: relative;
+}
+
+
+
+.testi-card-id{
+    /* position: absolute;
+    top: 10px;
+    left: 20px; */
+    background-color: pink;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: rgb(174, 125, 84);
+    font-weight: 600;
+}
+
+.testi-card-img{
+    width: 70px;
+    height: 70px;
+    margin: 10px 15px;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 15px;
+    border: 3px solid rgb(174, 125, 84);
+
+}
+.testi-card-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+    object-fit: cover;
+}
+
+.testi-card-id h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 32px;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+    cursor: pointer;
+
+    position: absolute;
+    top: 20px;
+    left: 110px;
+    border-bottom: 1px solid black;
+}
 
 
 
 
+.testi-card-text{
+    background-color: rgb(55, 6, 53, 0.3);
+    width: 100%;
+    /* height: 50%; */
+    margin-top: 20px;
+    padding: 10px 20px;
+    /* white-space: nowrap; */
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    /* z-index: 2; */
+}
 
+.testi-card-text p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: rgb(174, 125, 84);
+    margin-top: 10px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.testi-rating{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.testi-rating i{
+    font-size: 15px;
+    color: #FEBA17;
+    margin: 0 2px;
+}
 
 
 
