--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -991,7 +991,7 @@
     width: 100%;
     /* height: 100%; */
     margin-top: 100px;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
     display: flex;
     align-items: center;
     /* justify-content: center; */
@@ -1202,6 +1202,156 @@
     top: 10px;
     left: 200px;
 }
+
+
+
+
+
+/* FOURTH SECTION */
+/* FOURTH SECTION */
+/* FOURTH SECTION */
+/* FOURTH SECTION */
+/* FOURTH SECTION */
+/* FOURTH SECTION */
+
+
+
+
+.four-section{
+    width: 100%;
+    height: 100vh;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    background-color: rgb(149, 49, 66);
+}
+
+
+
+.hotel-menu{
+    width: 100%;
+    /* height: 100%; */
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    position: relative;
+    background-color: rgb(49, 89, 149);
+
+}
+.hotel-menu-heading{
+    /* background-color: pink; */
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+    position: relative;
+    padding: 20px 0;
+}
+
+
+.hotel-menu-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    position: relative;
+}
+.hotel-menu-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 35%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.hotel-menu-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 62%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+
+.hotel-menu-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
+
+
+
+/* HOTEL MENU */
+/* HOTEL MENU */
+/* HOTEL MENU */
+/* HOTEL MENU */
+/* HOTEL MENU */
+
+
+
+.menu-card-cont{
+    background-color: lightcoral;
+    width: 80%;
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 50px 0;
+
+}
+
+
+.menu-card{
+    background-color: white;
+    width: 48%;
+    height: 150px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
