--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1319,25 +1319,76 @@
 .menu-card{
     background-color: white;
     width: 48%;
-    height: 150px;
+    /* height: 150px; */
     position: relative;
     display: flex;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
+    padding: 10px 10px;
+    gap: 10px;
+    flex-grow: 50%;
 }
 
 
+.menu-img{
+    width: 70px;
+    height: 80px;
+    overflow: hidden;
+    flex: 2;
+}
+.menu-card:hover .menu-img img{
+    transform: scale(1.2);
+}
+.menu-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+}
 
 
+.menu-text{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    background-color: lightgreen;
+    width: 100%;
+    height: 80px;
+    padding: 10px 5px;
+    flex: 10;
+}
+.menu-text h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+}
+.menu-text p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: rgb(212, 212, 212);
+    color: black;
+}
 
+.line{
+    margin-top: 10px;
+    height: 2px;
+    width: 40%;
+    /* background-color: red; */
+    border-bottom: 2px dashed rgb(0, 0, 0);
+}
 
-
-
-
-
-
-
+.detail-btn{
+    /* background-color: #FEBA17; */
+    border: 1px solid rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    padding: 5px 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    position: absolute;
+    bottom: 10px;
+    cursor: pointer;
+}
 
 
 
