--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1227,7 +1227,7 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
-    background-color: rgb(149, 49, 66);
+    /* background-color: rgb(149, 49, 66); */
 }
 
 
@@ -1242,7 +1242,7 @@
     /* justify-content: center; */
     flex-direction: column;
     position: relative;
-    background-color: rgb(49, 89, 149);
+    /* background-color: rgb(49, 89, 149); */
 
 }
 .hotel-menu-heading{
@@ -1303,7 +1303,7 @@
 
 
 .menu-card-cont{
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
     width: 80%;
     /* height: 100%; */
     display: flex;
@@ -1326,6 +1326,8 @@
     padding: 10px 10px;
     gap: 10px;
     flex-grow: 50%;
+
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -1350,7 +1352,7 @@
     display: flex;
     justify-content: space-between;
     /* align-items: center; */
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
     width: 100%;
     height: 80px;
     padding: 10px 5px;
@@ -1382,7 +1384,7 @@
     /* background-color: #FEBA17; */
     border: 1px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
-    padding: 5px 10px;
+    padding: 3px 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
     position: absolute;
