--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1242,7 +1242,7 @@
     /* justify-content: center; */
     flex-direction: column;
     position: relative;
-    /* background-color: rgb(49, 89, 149); */
+    background-color: rgb(49, 89, 149);
 
 }
 .hotel-menu-heading{
@@ -1368,8 +1368,8 @@
 .menu-text p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: rgb(212, 212, 212);
     color: black;
+    color: rgb(149, 149, 149);
 }
 
 .line{
@@ -1391,6 +1391,203 @@
     bottom: 10px;
     cursor: pointer;
 }
+
+
+
+/* TEAM MEMBER */
+/* TEAM MEMBER */
+/* TEAM MEMBER */
+/* TEAM MEMBER */
+/* TEAM MEMBER */
+
+
+.team-member{
+    width: 100%;
+    /* height: 100%; */
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    position: relative;
+    background-color: rgb(49, 89, 149);
+
+}
+
+
+.team-heading{
+    /* background-color: pink; */
+    width: 100%;
+    /* height: 100px; */
+    text-align: center;
+    position: relative;
+    padding: 20px 0;
+}
+
+
+.team-heading h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: rgb(174, 125, 84);
+    margin-bottom: 20px;
+    position: relative;
+}
+.team-heading h1::before{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 39%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+
+}
+.team-heading h1::after{
+    content: '';
+    position: absolute;
+    top: 30%;
+    left: 58%;
+    background: url('../img/design.png') no-repeat;
+    width: 80px;
+    height: 20px;
+}
+
+.team-heading p{
+    font-family: 'Margesh', sans-serif;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    margin-bottom: 20px;
+}
+
+
+/* TEAM MEMEBER CARD */
+
+
+
+.team-card-cont{
+    /* background-color: lightcoral; */
+    width: 80%;
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 50px 0;
+    gap: 20px;
+
+}
+
+
+.team-card{
+    /* background-color: lightgreen; */
+    width: 22%;
+    height: 420px;
+    /* padding: 10px; */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.member-img::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 335px;
+    border: 1px solid rgb(174, 125, 84);
+    /* background-color: rgba(0, 123, 255, 0.393); */
+}
+.member-img{
+    /* border: 2px solid #000; */
+    /* background-color: #007bff; */
+    width: 85%;
+    height: 300px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.team-card:hover .member-img img{
+    transform: scale(1.1);
+}
+.member-img img{
+    width: 100%;
+    height: 100%;
+    transition: .3s linear;
+}
+
+
+
+.member-detail{
+    /* background-color: lightseagreen; */
+    width: 80%;
+    height: 80px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transition: .3s linear;
+
+    gap: 5px;
+}
+.member-detail h2{
+    font-family: 'sageffine', sans-serif;
+    font-size: 25px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: .3s linear;
+}
+.member-detail:hover h2{
+    color: rgb(174, 125, 84);
+}
+
+.member-detail p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    color: rgb(212, 212, 212);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
