--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -788,7 +788,7 @@
     position: relative;
     background-color: rgb(246, 243, 238);
     top: 0;
-    margin-bottom: 200px;
+    /* margin-bottom: 0px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1219,8 +1219,8 @@
 
 .four-section{
     width: 100%;
-    height: 100vh;
-    margin-top: 100px;
+    /* height: 100vh; */
+    margin-top: 50px;
     margin-bottom: 50px;
     display: flex;
     align-items: center;
@@ -1229,7 +1229,11 @@
     position: relative;
     /* background-color: rgb(149, 49, 66); */
 }
-
+.design-img3{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 
 
 .hotel-menu{
@@ -1239,10 +1243,10 @@
     margin-bottom: 50px;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: column;
     position: relative;
-    background-color: rgb(49, 89, 149);
+    /* background-color: rgb(49, 89, 149); */
 
 }
 .hotel-menu-heading{
@@ -1411,7 +1415,7 @@
     /* justify-content: center; */
     flex-direction: column;
     position: relative;
-    background-color: rgb(49, 89, 149);
+    /* background-color: rgb(49, 89, 149); */
 
 }
 
