--- a/assets/file/style.css
+++ b/assets/file/style.css
@@ -1187,7 +1187,7 @@
 
 .testimo-card3{
     position: relataive;
-    top: 30px;
+    top: 0px;
     right: 70px;
 }
 
@@ -1200,7 +1200,7 @@
 .testimo-card5{
     position: relataive;
     top: 10px;
-    left: 200px;
+    left: 230px;
 }
 
 
@@ -1632,16 +1632,80 @@
 
 
 
+/* COUNTER */
 
 
+.counter-cont{
+    /* background-color: lightsalmon; */
+    background-image: url("../img/counter-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    height: 200px;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inner-cont{
+    /* background-color: rgb(208, 122, 255); */
+    height: 200px;
+    width: 80%;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    box-sizing: border-box;
+}
 
 
+.count{
+    box-sizing: border-box;
+    height: 70%;
+    width: 25%;
+    /* background-color: #007bff; */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    position: relative;
+}
+.counter-no{
+    /* background-color: pink; */
+    width: 100%;
+    /* height: auto; */
+
+    /* text-align: center; */
+}
+.counter-no h1{
+    font-size: 90px;
+    font-family: 'Margesh', sans-serif;
+    color: rgb(240, 220, 200);
+    margin-top: 10px;
+}
+.count p{
+    position: absolute;
+    font-size: 35px;
+    font-weight: 900;
+    font-family: 'sageffine', sans-serif;
 
 
+}
 
-
-
-
+.counter-divider{
+    height: 100px;
+    background-color: rgb(240, 220, 200);
+    width: 1px;
+}
 
 
 
